# hum-lang

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md  SPEC.md  TRADEMARK.md  WORKORDER.md  WORKORDER_10.md
.github/: pull_request_template.md
docs/: ADOPTION_STRATEGY_2026.md  ALPHA_CHARTER_0_1.md  ALPHA_CLAIMS_MATRIX_0_1.md  ALPHA_THREAT_MODEL_0_1.md  ARCHITECTURE.md  BACKEND_CONTRACT_SCHEMA.md  BACKEND_STRATEGY.md  BDFR_SCOPE_AND_SAFETY_DIRECTIVE.md  BEGINNER_EXPERIENCE.md  BEGINNER_GLOSSARY.md  BOOTSTRAP_COMPILER.md  CAPABILITIES_SCHEMA.md  COMPILE_TIME_STRATEGY.md  COMPUTING_LESSONS_SWEEP_2026.md  CORE_LANGUAGE_SHAPE.md  CROSS_LANGUAGE_REGRET_LEDGER.md  DEBUGGABILITY_DOCTRINE.md  DEBUG_INFO_AND_VISUALIZER_MODEL.md  DIAGNOSTICS.md  DIAGNOSTICS_SCHEMA_0_1.md  DOCTOR_SCHEMA.md  EDITOR_AND_INTEGRATION_STRATEGY.md  EDITOR_FIXTURES.md  EFFECT_REPORT_SCHEMA_0_1.md  ENGINEERING_LENS.md  ERGONOMICS_AND_OPERATORS.md  EVIDENCE_BUNDLE_LAYOUT_0_1.md  EVIDENCE_REPORT_SCHEMA.md  EXTERNAL_ADVICE_REVIEW.md  FORMAL_CORE.md  FORMATTER.md  GOVERNANCE.md  HASH_TABLE_RESEARCH_2501_02305.md  HUM_CORE_CONTRACT_SCHEMA.md  HUM_CORE_LOWER_SCHEMA.md  HUM_CORE_PREVIEW_SCHEMA.md  HUM_CORE_VERIFY_SCHEMA.md  HUM_EFFECT_CHECK_SCHEMA.md  HUM_IR_CONTRACT_SCHEMA.md  (+64 more)
experiments/cranelift-feasibility/: Cargo.toml  README.md  REPORT.md
experiments/cranelift-feasibility/cases/: unsupported_subtract.hum
experiments/cranelift-feasibility/src/: lib.rs  main.rs
experiments/cranelift-feasibility/support/: native_driver.rs
(+376 files in other folders)
