[package]
name = "hum-cranelift-feasibility"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cranelift-codegen = "=0.133.1"
cranelift-frontend = "=0.133.1"
cranelift-jit = "=0.133.1"
cranelift-module = "=0.133.1"
cranelift-native = "=0.133.1"
cranelift-object = "=0.133.1"
serde_json = "=1.0.145"
